auto test and image save
auto test and image save

--- a/Protein Crystallization/Form1.resx
+++ b/Protein Crystallization/Form1.resx
@@ -10068,4 +10068,7 @@
   <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>433, 22</value>
   </metadata>
+  <metadata name="folderBrowserDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>548, 28</value>
+  </metadata>
 </root>
