--- a/Protein Crystallization/Form1.resx
+++ b/Protein Crystallization/Form1.resx
@@ -10071,4 +10071,7 @@
   <metadata name="folderBrowserDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>548, 28</value>
   </metadata>
+  <metadata name="autotesttime.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>800, 24</value>
+  </metadata>
 </root>
